wip: add missing swagger docs
